Parser/test_cases/bad/casemissingcolon.cl
class Hello {

   foo:Int <- 89;
   bar:Int;
   
   foo(a:Int, b:Int, c:String): Int  {
      case a of
        b: Int => expr1;
        c: Bool => expr2;
        d Object  => { expr3; expr4; }
      esca 
   };
   
   bar() :Int {
      6
   };
   
   
};
